syntax = "proto3";


option java_multiple_files = true;
option java_package = "org.spin.backend.grpc.report_engine";
option java_outer_classname = "ReportEngineService";

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

// Base URL
// /report-engine/

package report_engine;

// The greeting service definition.
service ReportEngine {
	//	Generate Report
	rpc RunReport(RunReportRequest) returns (RunReportResponse) {
		option (google.api.http) = {
			get: "/v1/report-engine/run-report/{id}"
		};
	}
}

// Get Report Output Request
message RunReportRequest {
	int32 id = 1;
	string filters = 2;
	string sort_by = 3;
	int32 page_size = 4;
	string page_token = 5;
	int32 report_view_id = 6;
	bool is_summary = 7;
}

message RunReportResponse {
	int32 id = 1;
	string name = 2;
	string description = 3;
	int32 print_format_id = 4;
	int32 report_view_id = 5;
	int64 record_count = 6;
	repeated ReportColumn columns = 7;
	repeated ReportRow rows = 8;
	string next_page_token = 9;
}

message ReportColumn {
	string code = 1;
	string title = 2;
	string color= 3;
	string style = 4;
}

message ReportRow {
        repeated ReportCell cells = 1;
	int32 level = 2;
	repeated ReportRow children = 3;
}

message ReportCell {
	google.protobuf.Struct value = 1;
	string display_value = 2;
        google.protobuf.Struct sum = 3;
	google.protobuf.Struct mean = 4;
        google.protobuf.Struct count = 5;
	google.protobuf.Struct minimum = 6;
        google.protobuf.Struct maximum = 7;
	google.protobuf.Struct variance = 8;
        google.protobuf.Struct deviation = 9;
}
